Attempt to fix initial zoom on mobiles

--- a/css/category.css
+++ b/css/category.css
@@ -184,7 +184,7 @@ p {
     }
     .sidebar {
     	width: 100%;
-  		height: 140px;
+  		height: 160px;
   		text-align: center;
   		position: static;
 
